<resources>
    <string name="app_name">SearchMoviesApp</string>
    <string name="something_went_wrong">Что то пошло не так</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="poster">Постер</string>
    <string name="about_movie">О фильме</string>

    <!-- Movie Details Fragment -->
    <string name="imDbRating">Рейтинг imDb:</string>
    <string name="year">Год:</string>
    <string name="countries">Страна:</string>
    <string name="genres">Жанр:</string>
    <string name="directors">Режиссёр:</string>
    <string name="writers">Сценарист:</string>
    <string name="stars">В ролях:</string>
    <string name="plot">Сюжет:</string>
    <string name="show_cast">show cast</string>

    <string name="text_info_fragment">IMDB Search Movie</string>
    <string name="version_info_fragment">1.0.0</string>

    <!--  Bottom navigation menu  -->
    <string name="movies">Movies</string>
    <string name="persons">Persons</string>
    <string name="info">Info</string>

    <string name="nothing_searched_yet">Вы еще ничего не искали</string>
</resources>