<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/informationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="16dp">

        <!--  Barriers  -->
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="imDbRatingTag"
            app:barrierDirection="end" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/countriesBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="countriesTextTag"
            app:barrierDirection="bottom" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/genresBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="genresTextTag"
            app:barrierDirection="bottom" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/directorsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="directorsTextTag"
            app:barrierDirection="bottom" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/writersBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="writersTextTag"
            app:barrierDirection="bottom" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/starsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="starsTextTag"
            app:barrierDirection="bottom" />
        <!-- Заголовки -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Hello" />
        <TextView
            android:id="@+id/imDbRating"
            app:layout_constraintTag="imDbRatingTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"

            android:text="@string/imDbRating" />
        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/imDbRating"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/year" />
        <TextView
            android:id="@+id/countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/countries" />
        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/countriesBarrier"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/genres" />
        <TextView
            android:id="@+id/directors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/genresBarrier"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/directors" />
        <TextView
            android:id="@+id/writers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/directorsBarrier"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/writers" />
        <TextView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@id/starsText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/stars" />
        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="12pt"
            app:layout_constraintTop_toBottomOf="@id/starsBarrier"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/plot" />

        <!--  Переменные  -->
        <TextView
            android:id="@+id/imDbRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/imDbRating"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="8.8" />
        <TextView
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/year"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="2010" />
        <TextView
            android:id="@+id/countriesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="countriesTextTag"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/countries"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="@string/countries" />
        <TextView
            android:id="@+id/genresText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="genresTextTag"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/genres"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="@string/genres" />
        <TextView
            android:id="@+id/directorsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="directorsTextTag"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/directors"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="@string/directors" />
        <TextView
            android:id="@+id/writersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="writersTextTag"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="@id/writers"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="@string/writers" />
        <TextView
            android:id="@+id/starsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="starsTextTag"
            android:paddingStart="14dp"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/writersBarrier"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Элайджа Вуд, Иэн Маккеллен, Лив Тайлер, Вигго Мортенсен" />
        <TextView
            android:id="@+id/plotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/plot"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/plot" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>